--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "ts-node": "^8.10.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.8.3"
+  },
+  "scripts": {
+    "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql"
   }
 }
