--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "graphql-yoga": "^1.18.3",
     "helmet": "^3.22.0",
+    "merge-graphql-schemas": "^1.7.8",
     "morgan": "^1.10.0"
   }
 }
