--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "cloning uber",
   "main": "index.js",
   "scripts": {
-    "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql"
+    "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql",
+    "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
+    "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,9 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.5",
+    "babel-runtime": "^6.26.0",
+    "gql-merge": "^0.0.6",
+    "graphql-to-typescript": "^0.1.2",
     "nodemon": "^2.0.3",
     "ts-node": "^8.10.1",
     "tslint-config-prettier": "^1.18.0",
@@ -32,6 +37,7 @@
     "graphql-yoga": "^1.18.3",
     "helmet": "^3.22.0",
     "merge-graphql-schemas": "^1.7.8",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pg": "^8.0.3"
   }
 }
