--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "helmet": "^3.22.0",
     "merge-graphql-schemas": "^1.7.8",
     "morgan": "^1.10.0",
-    "pg": "^8.0.3"
+    "pg": "^8.0.3",
+    "typeorm": "^0.2.24"
   }
 }
