--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "helmet": "^3.22.0",
     "merge-graphql-schemas": "^1.7.8",
