--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "cloning uber",
   "main": "index.js",
   "scripts": {
+    "predev": "yarn run types", //types가 변경될 떄 시작하도록
     "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql",
     "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
     "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
