--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.5",
+    "@types/twilio": "^2.11.0",
     "babel-runtime": "^6.26.0",
     "gql-merge": "^0.0.6",
     "graphql-to-typescript": "^0.1.2",
@@ -44,6 +45,7 @@
     "merge-graphql-schemas": "^1.7.8",
     "morgan": "^1.10.0",
     "pg": "^8.0.3",
+    "twilio": "^3.44.0",
     "typeorm": "^0.2.24"
   }
 }
