#1.41 Creating Custom JWT

--- a/src/.env
+++ b/src/.env
@@ -4,3 +4,4 @@ DB_PASSWORD = system
 TWILIO_SID = AC0eeab5cdb59779301630857f55967ef1
 TWILIO_PHONE = 12058589081
 TWILIO_TOKEN = bb16ab06d2bdb2ebe531441a5c7ffb9e
+JWT_TOKEN = J8g4d_fab22n?dPHPd@!3vsm?-=D!K+y+%qLXwUE4mhzjECQhP5
