--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/helmet": "^0.0.46",
-    "@types/jsonwebtoken": "^8.3.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.5",
     "@types/twilio": "^2.11.0",
@@ -42,6 +42,7 @@
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "helmet": "^3.22.0",
+    "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.8",
     "morgan": "^1.10.0",
     "pg": "^8.0.3",
