#1.51.1 fixed some errors

--- a/src/.env
+++ b/src/.env
@@ -5,4 +5,4 @@ TWILIO_SID = AC0eeab5cdb59779301630857f55967ef1
 TWILIO_PHONE = 12058589081
 TWILIO_TOKEN = bb16ab06d2bdb2ebe531441a5c7ffb9e
 JWT_TOKEN = J8g4d_fab22n?dPHPd@!3vsm?-=D!K+y+%qLXwUE4mhzjECQhP5
-MAILGUN_API_KEY =  a2b91229-9ebc1eb7
+MAILGUN_API_KEY = 47e9ca6dc152dccde340ed03d341a0ec-a2b91229-9ebc1eb7
