* building now 0.0.2 _ some ts errors fixed

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "cd src && nodemon --exec ts-node index.ts -e ts,graphql",
     "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
     "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts",
-    "prebuild":"rm -rf dist",
+    "prebuild": "rm -rf dist",
     "build": "tsc"
   },
   "repository": {
@@ -31,6 +31,7 @@
     "@types/node": "^13.13.5",
     "@types/twilio": "^2.11.0",
     "babel-runtime": "^6.26.0",
+    "copy": "^0.3.2",
     "gql-merge": "^0.0.6",
     "graphql-to-typescript": "^0.1.2",
     "nodemon": "^2.0.3",
