--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
     "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts",
     "prebuild": "rm -rf dist",
-    "build": "tsc"
+    "build": "tsc",
+    "postbuild": "cd src && copy ./api/**/*.graphql ../dist/api"
   },
   "repository": {
     "type": "git",
